AC_INIT(gnome-vfs-ifolder, 3.1.0)
AC_CONFIG_SRCDIR(gnome-vfs-ifolder.pc.in)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([1.9 tar-ustar])
AM_MAINTAINER_MODE

GLIB_MINIMUM_VERSION=2.6
GNOME_VFS_MODULE_MINIMUM_VERSION=2.10
SIMIAS_CLIENT_MINIMUM_VERSION=1.0
IFOLDER_MINIMUM_VERSION=3.1

AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_HEADER_STDC
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_MINIMUM_VERSION)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GNOME_VFS_MODULE, gnome-vfs-module-2.0 >= $GNOME_VFS_MODULE_MINIMUM_VERSION)
AC_SUBST(GNOME_VFS_MODULE_CFLAGS)
AC_SUBST(GNOME_VFS_MODULE_LIBS)

PKG_CHECK_MODULES(SIMIAS_CLIENT_C, simias-client-c >= $SIMIAS_CLIENT_MINIMUM_VERSION)
AC_SUBST(SIMIAS_CLIENT_C_CFLAGS)
AC_SUBST(SIMIAS_CLIENT_C_LIBS)

PKG_CHECK_MODULES(IFOLDER_C, ifolder3-c >= $IFOLDER_MINIMUM_VERSION)
AC_SUBST(IFOLDER_C_CFLAGS)
AC_SUBST(IFOLDER_C_LIBS)

EMPTY=
SPACE='$(EMPTY) $(EMPTY)'

AC_SUBST(EMPTY)
AC_SUBST(SPACE)

#
# Handle --enable-debug
#
AC_ARG_ENABLE(debug, [
  --enable-debug          configure the Makefiles to build in DEBUG mode],
    [case "${enableval}" in
        yes) enable_debug=true ;;
        no)  enable_debug=false ;;
        *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
    esac],[enable_debug=false])
AM_CONDITIONAL(DEBUG, test x$enable_debug = xtrue)
if test "$enable_debug" = "true"
then
  # build debug version
  CFLAGS='-g'
else
  # build optimized version
  CFLAGS=''
fi

#
# configure files
#
AC_OUTPUT([
	Makefile
	gnome-vfs-ifolder.pc
	src/Makefile
	icons/Makefile
	package/Makefile
	package/gnome-vfs-ifolder.spec
])
